--- a/angular.json
+++ b/angular.json
@@ -20,10 +20,17 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/images"
             ],
             "styles": [
-              "src/styles.css"
+              "src/css/bootstrap.min.css",
+              "src/css/font-awesome.min.css",
+              "src/css/responsive.css",
+              "src/css/style.css",
+              "src/css/effects/component.css",
+              "src/css/effects/normalize.css",
+              "src/css/effects/set2.css"
             ],
             "scripts": []
           },
