--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/images"
+              "src/images",
+              "src/data"
             ],
             "styles": [
               "src/css/bootstrap.min.css",
