--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,9 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/images",
+              "src/data"
             ],
             "styles": [
               "src/css/fonts.css",
